Add Loader and Background Video

--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -30,9 +30,9 @@
 <body>
 
 <!-- Loader -->
-<!--<div id="page-loader">
+<div id="page-loader">
     <svg class="loader" width="32px" height="32px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg"><circle class="circle" fill="none" stroke-width="5" stroke-linecap="round" cx="32" cy="32" r="32"></circle></svg>
-</div>-->
+</div>
 <!-- Loader / End -->
 
 <!-- Header -->
@@ -77,7 +77,7 @@
     <section id="start" class="section fullheight dark bg-dark">
 
         <!-- BG Video -->
-        <!--<div class="bg-video" data-property="{videoURL:'https://www.youtube.com/watch?v=4GC0jGODGeY',showControls: false,containment:'self',startAt:50,stopAt:50,mute:true,autoPlay:true,loop:true,opacity:.2}"></div>-->
+        <div class="bg-video" data-property="{videoURL:'https://www.youtube.com/watch?v=4GC0jGODGeY',showControls: false,containment:'self',startAt:50,stopAt:50,mute:true,autoPlay:true,loop:true,opacity:.2}"></div>
         
         <div class="container container-custom v-center" data-local-scroll>
             <h1 class="text-lg mb-0"><em>Hi! I’m</em> Alfacode.me</h1>
