--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -446,7 +446,7 @@
 <script src="/src/assets/js/core.js"></script>
 
 <!-- JS Google Map -->
-<script src="http://maps.google.com/maps/api/js"></script>
+<script src="https://maps.google.com/maps/api/js"></script>
 
 </body>
 
