--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -30,9 +30,9 @@
 <body>
 
 <!-- Loader -->
-<div id="page-loader">
+<!-- <div id="page-loader">
     <svg class="loader" width="32px" height="32px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg"><circle class="circle" fill="none" stroke-width="5" stroke-linecap="round" cx="32" cy="32" r="32"></circle></svg>
-</div>
+</div> -->
 <!-- Loader / End -->
 
 <!-- Header -->
