--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -75,9 +75,9 @@
 
     <!-- Section - Start -->
     <section id="start" class="section fullheight dark bg-dark">
-
-        <!-- BG Video -->
-        <div class="bg-video" data-property="{videoURL:'https://www.youtube.com/watch?v=4GC0jGODGeY',showControls: false,containment:'self',startAt:50,stopAt:50,mute:true,autoPlay:true,loop:true,opacity:.2}"></div>
+    
+        <!-- Background -->
+        <div class="bg-image zooming" style="background-image: url("src/assets/img/photos/developer_bg01.jpg");"><img src="src/assets/img/photos/developer_bg01.jpg" alt="" style="display: none;"></div>
         
         <div class="container container-custom v-center" data-local-scroll>
             <h1 class="text-lg mb-0"><em>Hi! I’m</em> Alfacode.me</h1>
