--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -60,10 +60,10 @@
     <!-- Bottom -->
     <div class="bottom text-center">
         <ul class="nav-icons nav-sm">
-            <li><a href="https://www.facebook.com/SuryAlfabet"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/alfacode_me"><i class="fa fa-instagram"></i></a></li>
-            <li><a href="https://plus.google.com/u/0/115062058430608311414"><i class="fa fa-google-plus"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/surya-handokho-putra"><i class="fa fa-linkedin"></i></a></li>
+            <li><a target="_blank" href="https://www.facebook.com/SuryAlfabet"><i class="fa fa-facebook"></i></a></li>
+            <li><a target="_blank" href="https://www.instagram.com/alfacode_me"><i class="fa fa-instagram"></i></a></li>
+            <li><a target="_blank" href="https://plus.google.com/u/0/115062058430608311414"><i class="fa fa-google-plus"></i></a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/surya-handokho-putra"><i class="fa fa-linkedin"></i></a></li>
         </ul>
     </div>
 
@@ -351,10 +351,10 @@
                         </div>
                         <div class="col-sm-6 text-right">
                             <ul class="nav-icons">
-                                <li><a href="https://www.facebook.com/SuryAlfabet"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="https://www.instagram.com/alfacode_me"><i class="fa fa-instagram"></i></a></li>
-                                <li><a href="https://plus.google.com/u/0/115062058430608311414"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="https://www.linkedin.com/in/surya-handokho-putra"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a target="_blank" href="https://www.facebook.com/SuryAlfabet"><i class="fa fa-facebook"></i></a></li>
+                                <li><a target="_blank" href="https://www.instagram.com/alfacode_me"><i class="fa fa-instagram"></i></a></li>
+                                <li><a target="_blank" href="https://plus.google.com/u/0/115062058430608311414"><i class="fa fa-google-plus"></i></a></li>
+                                <li><a target="_blank" href="https://www.linkedin.com/in/surya-handokho-putra"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
